0.7.1 (2014-03-19)
------------------

- Davis WDAT5 loggertodb timezone parameter now works with py2exe on
  Windows

0.7.0 (2014-03-18)
------------------

- Davis WDAT5 loggertodb file format now works

- Time series files can have empty lines

0.6.0 (2014-02-25)
------------------

- Windows installer for loggertodb

0.5.0 (2014-01-28)
------------------

- loggertodb support for Davis WDAT5 files

- loggertodb checks for configuration errors

0.4.1 (2013-11-14)
------------------

- loggertodb compatible with Django 1.5.5 and later.

0.4.0 (2013-10-31)
------------------

- Improve DST handling; use pytz.

0.3.0 (2013-10-14)
------------------

- Strip double quotes in loggertodb's simple data file format.

0.2.1 (2013-08-19)
------------------

- Improvements in installation procedure.

0.1.0 (2013-08-14)
------------------

- Initial release.