@@ -1,8 +1,8 @@
 import requests
 
 
-def login(base_url, user, password):
-    if not user:
+def login(base_url, username, password):
+    if not username:
         return {}
     if base_url[-1] != '/':
         base_url += '/'
@@ -12,7 +12,8 @@ def login(base_url, user, password):
     r1 = requests.post(login_url,
                        headers={'X-CSRFToken': r.cookies['csrftoken'],
                                 'Referer': login_url},
-                       data='username={}&password={}'.format(user, password),
+                       data='username={}&password={}'.format(username,
+                                                             password),
                        cookies=r.cookies)
     r1.raise_for_status()
     result = r1.cookies
